# ChangeLog for dev-ruby/mail
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/mail/ChangeLog,v 1.25 2012/08/14 04:18:14 flameeyes Exp $

  14 Aug 2012; Diego E. Pettenò <flameeyes@gentoo.org> mail-2.3.3.ebuild,
  mail-2.4.4.ebuild:
  Use the new rspec recipe for testing; on 2.3.3 this also changes the test dep
  from rspec:0 to rspec:2, but keeps a rspec:2 dependency for documentation.

  10 Aug 2012; Hans de Graaff <graaff@gentoo.org> mail-2.3.3.ebuild:
  Add untested ppc keyword to fix rails dependency tree.

  20 Jul 2012; Hans de Graaff <graaff@gentoo.org> -mail-2.3.0.ebuild:
  Remove old version.

*mail-2.3.3 (14 Jun 2012)

  14 Jun 2012; Hans de Graaff <graaff@gentoo.org> +mail-2.3.3.ebuild:
  Version bump.

  01 May 2012; Raúl Porcel <armin76@gentoo.org> mail-2.2.19.ebuild:
  Drop ia64/sparc keywords

*mail-2.4.4 (04 Apr 2012)

  04 Apr 2012; Hans de Graaff <graaff@gentoo.org> +mail-2.4.4.ebuild:
  Version bump.

  11 Mar 2012; Brent Baude <ranger@gentoo.org> mail-2.3.0.ebuild:
  Marking mail-2.3.0 ~ppc64 for bug 396547

  31 Dec 2011; Fabian Groffen <grobian@gentoo.org> mail-2.3.0.ebuild:
  Add Prefix keywords, bug #396547

*mail-2.3.0 (30 Dec 2011)

  30 Dec 2011; Hans de Graaff <graaff@gentoo.org> +mail-2.3.0.ebuild:
  Version bump. Add ruby19. Drop arches due to bug 396547.

  16 Oct 2011; Hans de Graaff <graaff@gentoo.org> -mail-2.2.18.ebuild:
  Remove old version.

  09 Sep 2011; Fabian Groffen <grobian@gentoo.org> mail-2.2.19.ebuild:
  Marked ~sparc-solaris

  24 Jul 2011; Raúl Porcel <armin76@gentoo.org> mail-2.2.18.ebuild,
  mail-2.2.19.ebuild:
  Add ~ia64/~sparc wrt #351835

  24 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org> mail-2.2.19.ebuild:
  Marked ~ppc/~ppc64 wrt #351835

*mail-2.2.19 (04 Jul 2011)

  04 Jul 2011; Hans de Graaff <graaff@gentoo.org> +mail-2.2.19.ebuild:
  Version bump.

  29 Jun 2011; Fabian Groffen <grobian@gentoo.org> mail-2.2.18.ebuild: