@@ -1,22 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST mail-2.2.19.tar.gz 655385 SHA256 ddd32479389e25af6819d5485c466ba2d64e10b5fffae88b14c3342c59009b5e SHA512 3bbbe2b2a9be4a6b7a4113ba7537fd64ba5700b282726a24ec74ac3c0ae96fca28b1924da3bf1b5c0bafff0af5e0dbc10e22ca1d071320762aeede7ea5f69741 WHIRLPOOL b97e95fe4c0b0404baec16abc426e116da719fb0b0796a4add4df3fbb46709f79e30e2043111c02f5847e5e7f047fac36e514a0c167dd6501bffd0cf74299962
 DIST mail-2.3.3-git.tar.gz 668618 SHA256 1adb276d2de312bd95fbe5552b9df2c3b802eedbdaaf25dbbbcd4cf45b5951e0 SHA512 b6478f9b63fe6855ff857443aab718ff9a66b6b603aa203f6cf6cc2a32ccd3c3b52d0ce8697c84285a209fd2cf30c31e12addffe1b7eb5326c806553817f0523 WHIRLPOOL 7a8f020c89d38343ce6305a6f926f709298093198a285dd5d7ae1d9f7bd728e19c3119abc293ede81aee63dde254cfa387972cffdc5df48c887fe7102a0585e1
 DIST mail-2.4.4.tar.gz 677102 SHA256 2195c789c5178388f3ed5094ddad93683bac601fe3d9ecb13a3a9f9e7d97ba87 SHA512 aeb0075950d5938e1a972c9195ec836160c6c9f600aaa2c0e78c715aabf4000074bde311cc0c87a1f3edf237e5a6835299c23f3b903541a043134139472eae82 WHIRLPOOL e75e9e62602ca13658e16d096cc48921307c9035e1b42700eaee77d38c4f10891731d34e0984c8eb98d2d30320ac87fb64b5cf03bc1c88eeb11be5d172a594d8
-EBUILD mail-2.2.19.ebuild 1223 SHA256 8d6dcf1d6b7ccf4a2bc33bf33d7f14fa42f80c921ae9b93d3376a417cb962515 SHA512 338bf604d205ef48adecd1b5f5af185b3defdc4c36a9bdbdc19ef4f8e8f774969abfe706bff202864c5a1587f7248657b98c8b95af817de2bbdab6ac59d2904e WHIRLPOOL 416d0d367d07b649e121c8f2f14ef298b1c8df94f4a8935bbcb86abcb9453932e712109e5c30475be22e28c995e9fba645a33b21b665d653a81d26cd0ee55fb9
 EBUILD mail-2.3.3.ebuild 1626 SHA256 379960d12079148999131df7a08ca9d5cb4aa4758c7a659201ea1b00c2450c8c SHA512 a705ff7aa7b503d2910332a543cb39294c0e815b77773b6497a10b0b74a12a7e9ae91e214573c27189de71f986bc29bb8ea4f7b98525ea27af27e4f7e804c334 WHIRLPOOL cff31488fd8e21086e2784bc7578f517a7928d4a252c8f3d9c4caf2b8b363c4f7467369a60ccf8601b450fd4bf6843507158739d0efbd4bfb67f3ed631102727
 EBUILD mail-2.4.4.ebuild 1268 SHA256 fea60525fed51d562a809eb101d587870e5e66d6743e909043b136dc090b6ccf SHA512 0109b9b283e66dd241903d22e309b8a52437fb4954218aa4014e348c0142f2914379188857ccd4adf19b4dd6f4a8c6f9e84b239d83734e3443135035e2c75c1b WHIRLPOOL 51053d38bbe10dbdcbb245e4e6f8bdc38d7fe95b97b0b5297b6e42db6270639b314ebb569ee991a4ba1627e68456e5733f4a44b241ac0c630eef9b0fbc7edd2e
-MISC ChangeLog 3344 SHA256 22f4183ee096eae624462f1324808bdc26a91240ee816cc879f103cbf5fb1e7c SHA512 cc9ab726ced871c2511dda91d64ce46c9455c8c40b8fa171f3fb5d03d3b76a398d98f4a763aa33508931692b0582f43417c9c02db60cab6ded07f46d00cba1e6 WHIRLPOOL d6506c4405bd317f39d3175bcf409c89a037fda91bd1ff2d0bec4034f360d1a91f5e54bcae314c4a6183cc53b691bed54473d625a6bf8bc839ea7dae764379ff
+MISC ChangeLog 3432 SHA256 a1e24f9302062297dd2d5860c63e83337589e2d8516ea4d21f23939cea9a74c9 SHA512 dc5650f81fa0d26d0e42a5981153b5b2fcf2ccbccf2202e14c3095dc334f899f03e2664eb63b338a6e2f947a84653ba5142d669e0a3652df851b4fbaac561f3a WHIRLPOOL a7e907771a99ded60f820f2bee13c1fd482caad65d9c878ec7796de5de77694b5ba47caec87e2294011e231ea6ef47977dabc703a922844ac0f9f62b8c791d03
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJQKdGXAAoJEBzRPIrUMBNCIYQH/3Em+HxtfkCQW7TyGBRdJb9d
-MJ1LCxBMcb0kFfGBi4Mdc3lJBTfSzzT/gmO7mZLhlC9TktZs4ZYm2PCXYeFRzrRH
-nbe1g0fYrU87B3Qgj/wrEjju+X92LAE4nq+VVhgXCpnY1YL4kPgstLES/uKdvLgM
-5kYtw6X2WmxeCq8t1PoQ5JlUnHGKCsJybdmQsjXxyhJ7mlI9Q9V+cmidjs+c1HGO
-uAEr1w7d2ieFv/xGf12xUx3UEEtJLV8M9aY+Iubjm7U2oq0m7irc5wfZwOYjRhSh
-DEdXCTwn6yyzktLgSkXXWxXImBIgkYr5iI24RF2+mw4EyZLK+JNQP125pT9pBJM=
-=D6zo
+iEYEAREIAAYFAlBVxpwACgkQCaWpQKGI+9TGJACghWZsKqfmZZiSXRYziUKbPtDD
+yGUAn3p+VXRJf3Yeo3pvaQ1oRNtIeU+D
+=PkC4
 -----END PGP SIGNATURE-----
