@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/mail
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/mail/ChangeLog,v 1.25 2012/08/14 04:18:14 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/mail/ChangeLog,v 1.26 2012/09/16 12:31:18 pacho Exp $
+
+  16 Sep 2012; Pacho Ramos <pacho@gentoo.org> -mail-2.2.19.ebuild:
+  Drop masked versions.
 
   14 Aug 2012; Diego E. Pettenò <flameeyes@gentoo.org> mail-2.3.3.ebuild,
   mail-2.4.4.ebuild:
